testimonial, service card

--- a/index.html
+++ b/index.html
@@ -864,6 +864,19 @@
               </div>
               <div class="list">
                 <ul>
+                   <li>
+                    <div class="list_inner">
+                      <div class="info">
+                        <h3>Bdcalling IT Ltd.</h3>
+                        <span
+                          >Shopify Developer – Built and customized stores, integrated apps & APIs, and optimized performance for global clients. experience.</span
+                        >
+                      </div>
+                      <div class="year">
+                        <span>April 2025 – Present</span>
+                      </div>
+                    </div>
+                  </li>
                   <li>
                     <div class="list_inner">
                       <div class="info">
@@ -874,7 +887,7 @@
                         >
                       </div>
                       <div class="year">
-                        <span>JUNE-DEC-2024</span>
+                        <span>June 2024 – March 2025</span>
                       </div>
                     </div>
                   </li>
@@ -932,6 +945,20 @@
                   <h4>Next.JS</h4>
                   <div line-progressbar data-percentage="70"></div>
                 </div>
+                 <div class="progress-inner">
+                  <h4>GSAP</h4>
+                  <div line-progressbar data-percentage="75"></div>
+                </div>
+              </div>
+              <div class="sm-title">
+                <span><span>//</span> CMS Skills</span>
+              </div>
+                <div class="sm-progress">
+                <div class="progress-inner">
+                  <h4>Shopify</h4>
+                  <div line-progressbar data-percentage="95"></div>
+                </div>
+           
               </div>
             </div>
             <div class="right">
@@ -941,8 +968,12 @@
               <div class="sm-progress">
                 <div class="progress-inner">
                   <h4>English (Proficient)</h4>
-                  <div line-progressbar data-percentage="80"></div>
+                  <div line-progressbar data-percentage="90"></div>
                 </div>
+                  <div class="progress-inner">
+                  <h4>Hindi (Fluent Speaking & Listening)</h4>
+                  <div line-progressbar data-percentage="80"></div>
+                  </div>
                 <div class="progress-inner">
                   <h4>Bengali (Native)</h4>
                   <div line-progressbar data-percentage="100"></div>
@@ -953,8 +984,16 @@
               </div>
               <div class="sm-progress">
                 <div class="progress-inner">
-                  <h4>Photoshop & Figma</h4>
+                  <h4>Photoshop & Illustrator</h4>
                   <div line-progressbar data-percentage="80"></div>
+                </div>
+                   <div class="progress-inner">
+                  <h4>Figma & Canva </h4>
+                  <div line-progressbar data-percentage="80"></div>
+                </div>
+                  <div class="progress-inner">
+                  <h4>MS Access, MySQL </h4>
+                  <div line-progressbar data-percentage="85"></div>
                 </div>
                 <div class="progress-inner">
                   <h4>MS-( Word, Excel, PowerPoint)</h4>
@@ -972,11 +1011,15 @@
               </div>
               <div class="list">
                 <ul>
+                  
                   <li>
                     <span><label>✓</label> Web Design</span>
                   </li>
                   <li>
                     <span><label>✓</label>Web Development </span>
+                  </li>
+                    <li>
+                    <span><label>✓</label>Shopify Store Management </span>
                   </li>
                   <li>
                     <span><label>✓</label> Learning Figma & Photoshop</span>
@@ -1013,7 +1056,7 @@
                     >
                   </li>
                   <li>
-                    <span><label>✓</label>Leadship prize </span>
+                    <span><label>✓</label>Best Performer Prize </span>
                   </li>
                   <li>
                     <span><label>✓</label> CSS Design Awards</span>
@@ -1103,10 +1146,7 @@
                       <div class="list_inner">
                         <div class="text">
                           <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
+                           Quick support and responsive author—highly recommend both the theme and the developer.
                           </p>
                         </div>
                         <div class="details">
@@ -1124,12 +1164,12 @@
                       <div class="list_inner">
                         <div class="text">
                           <p>
-                         Samiul is the lead of the team who interacts with the customer, and his team of developers and project managers does the design work. Once I understood this dynamic, the project progressed smoothly. Samiul and his team are polite, engaged, and strive to do the best job. They arrange Zoom calls before at the start and at each stage to make sure they understand and you have the opportunity to explain, use these calls as it helps the process all round. I have worked on several website builds, and for the price paid to the team, this was exceptional value. We are left with a website we are proud to take to market. Highly recommend.
+                        Samiul and his team are professional, communicative, and delivered an exceptional website—highly recommended.
                           </p>
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
+                            <img src="./image/testimonial/4.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                           </div>
                           <div class="info">
                             <h3>Andrew Murphy</h3>
@@ -1206,95 +1246,92 @@
             <span><span>//</span> Top Notch Services</span>
           </div>
           <div class="services-list">
-            <ul>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-solid fa-code"></i></span>
-                    <h3 class="title">Web Development</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Building responsive, user-friendly websites using the
-                      latest web technologies like HTML, CSS, and JavaScript."
-                    </p>
-                  </div>
+          <ul>
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-solid fa-code"></i></span>
+                  <h3 class="title">Web Development</h3>
                 </div>
-              </li>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-brands fa-react"></i></span>
-                    <h3 class="title">Frontend Development</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Creating modern, dynamic, and interactive user interfaces
-                      using React and advanced frontend frameworks."
-                    </p>
-                  </div>
+                <div class="descrip">
+                  <p>
+                    "Building responsive, user-friendly websites using the latest web technologies like HTML, CSS, and JavaScript."
+                  </p>
                 </div>
-              </li>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-solid fa-pen"></i></span>
-                    <h3 class="title">Landing Page Design</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Designing intuitive, visually appealing interfaces
-                      tailored to user needs, focusing on usability and
-                      aesthetics."
-                    </p>
-                  </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-brands fa-shopify"></i></span>
+                  <h3 class="title">Shopify Development</h3>
                 </div>
-              </li>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-solid fa-mobile-screen"></i></span>
-                    <h3 class="title">Responsive Design</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Creating mobile-first, fully responsive designs with
-                      tools like Bootstrap and Tailwind CSS to ensure seamless
-                      experiences across all devices."
-                    </p>
-                  </div>
+                <div class="descrip">
+                  <p>
+                    "Creating and managing Shopify stores, customizing themes, integrating apps, and optimizing e-commerce stores for better user experience and sales."
+                  </p>
                 </div>
-              </li>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-solid fa-palette"></i></span>
-                    <h3 class="title">Website Redesign</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Enhancing and modernizing outdated websites to align with
-                      current trends and user expectations."
-                    </p>
-                  </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-brands fa-react"></i></span>
+                  <h3 class="title">Frontend Development</h3>
                 </div>
-              </li>
-              <li>
-                <div class="list_inner">
-                  <div class="card-head">
-                    <span><i class="fa-regular fa-clock fa-spin"></i></span>
-                    <h3 class="title">Web Animation</h3>
-                  </div>
-                  <div class="descrip">
-                    <p>
-                      "Enhancing user engagement with smooth, interactive
-                      animations and effects using GSAP and modern web
-                      technologies."
-                    </p>
-                  </div>
+                <div class="descrip">
+                  <p>
+                    "Creating modern, dynamic, and interactive user interfaces using React and advanced frontend frameworks."
+                  </p>
                 </div>
-              </li>
-            </ul>
+              </div>
+            </li>
+
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-solid fa-mobile-screen"></i></span>
+                  <h3 class="title">Responsive & Landing Page Design</h3>
+                </div>
+                <div class="descrip">
+                  <p>
+                    "Designing intuitive, visually appealing, mobile-first interfaces using Bootstrap, Tailwind CSS, and modern design principles."
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-solid fa-palette"></i></span>
+                  <h3 class="title">Website Redesign</h3>
+                </div>
+                <div class="descrip">
+                  <p>
+                    "Enhancing and modernizing outdated websites to align with current trends and user expectations."
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="list_inner">
+                <div class="card-head">
+                  <span><i class="fa-regular fa-clock fa-spin"></i></span>
+                  <h3 class="title">Web Animation</h3>
+                </div>
+                <div class="descrip">
+                  <p>
+                    "Enhancing user engagement with smooth, interactive animations and effects using GSAP and modern web technologies."
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+
           </div>
         </section>
         <!--Service end =========================== -->
@@ -1480,6 +1517,7 @@
                         target="_blank"
                         title="GitHub Profile"
                         rel="noopener noreferrer"
+                        alt="Web Developer & Shopify Expert | React & Next.js Expert"
                       >
                         <i class="fab fa-github"></i>
                       </a>
@@ -1489,7 +1527,7 @@
                         href="https://x.com/samiulajom"
                         title="Twitter Profile"
                         target="_blank"
-                        rel="noopener noreferrer"
+                        rel="noopener noreferrer" 
                         ><i class="fa-brands fa-square-x-twitter"></i
                       ></a>
                     </li>
