banner image update

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
           </div>
           <div class="right">
             <div class="image-container">
-              <img src="./image/banner/samiul-4.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
+              <img src="./image/banner/samiul-2.webp" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
             </div>
           </div>
         </section>
