mobile number link work

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                   <li>
                     <span>Mail</span>
                     <span
-                      ><a class="line_effect" href="#"
+                      ><a class="line_effect" href="mailto:samiulajomm@gmail.com"
                         >samiulajomm@gmail.com</a
                       ></span
                     >
@@ -797,7 +797,7 @@
                   <li>
                     <span>Phone</span>
                     <span
-                      ><a class="line_effect" href="#">+8801957006467</a></span
+                      ><a class="line_effect" href="tel:+8801957006467">+8801957006467</a></span
                     >
                   </li>
                   <li>
@@ -1472,7 +1472,9 @@
                     <span><i class="fa-solid fa-location-dot"></i></span>
                     <div>
                       <h3>Phone</h3>
-                      <p>+88 01957-00-6467</p>
+                      <a href="tel:+8801957006467">+88 01957-00-6467</a>
+                      <br>
+                      <a href="tel:+8801811649143">+88 01811-64-9143</a>
                     </div>
                   </li>
                 </ul>
